samples/_failures_safe/1761005713_3468b3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_182b7c7f.c: In function ‘main’:
./samples/SAFE/__tmp_182b7c7f.c:172:5: error: expected expression at end of input
  172 |     return
      |     ^~~~~~
./samples/SAFE/__tmp_182b7c7f.c:172:5: error: expected declaration or statement at end of input
